[package]
name = "lux-patcher"
version = "0.1.0"
authors = ["daniel"]
edition = "2018"

[dependencies]
argh = "0.1.4"
assembly-xml = "0.1"
assembly-pack = "0.2.1"
async-compat = "0.2"
bytes = "1"
color-eyre = "0.5"
futures-core = "0.3"
futures-util = { version = "0.3", features = ["io"] }
#hyper = { version = "0.14", features = ["client", "http1"] }
nom = "6.1.2"
nom-supreme = "0.4.2"
pretty_env_logger = "0.4"
log = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
terminal-menu = "2.0"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.6", features = ["io"] }
